--- a/service.yaml
+++ b/service.yaml
@@ -1,1 +1,15 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: vscode-server
+  namespace: applications
+spec:
+  ports:
+    - name: http
+      port: 8443
+      protocol: TCP
+      targetPort: http
+  selector:
+    app.kubernetes.io/instance: vscode-server
+    app.kubernetes.io/name: code-server
+  type: ClusterIP
