--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           name: vscode-server
           env:
             - name: DOCKER_MODS
-              value: "linuxserver/mods:code-server-extension-arguments|linuxserver/mods:code-server-zsh"
+              value: "linuxserver/mods:code-server-extension-arguments|linuxserver/mods:code-server-zsh|linuxserver/mods:code-server-scikit-learn"
           ports:
             - containerPort: 8443
               name: http
