--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,7 +29,9 @@ spec:
           name: vscode-server
           env:
             - name: DOCKER_MODS
-              value: "linuxserver/mods:code-server-extension-arguments|linuxserver/mods:universal-package-install|linuxserver/mods:code-server-zsh|linuxserver/mods:code-server-scikit-learn"
+              value: "linuxserver/mods:universal-package-install|linuxserver/mods:code-server-zsh"
+            - name: VSCODE_EXTENSION_IDS
+              value: "vscode-icons-team.vscode-icons|ms-azuretools.vscode-docker"
             - name: INSTALL_PACKAGES
               value: "rsync|git|nginx"
             - name: INSTALL_PIP_PACKAGES
