--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app.kubernetes.io/name: code-server
     spec:
       containers:
-        - image: docker.io/linuxserver/code-server:v4.0.2-ls111
+        - image: docker.io/linuxserver/code-server:4.93.1
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 5
