--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,6 +28,8 @@ spec:
             timeoutSeconds: 10
           name: vscode-server
           env:
+            - name: SUDO_PASSWORD
+              value: "password"
             - name: DOCKER_MODS
               value: "linuxserver/mods:universal-package-install|linuxserver/mods:code-server-zsh|linuxserver/mods:universal-docker-in-docker|linuxserver/mods:code-server-extension-arguments"
             - name: VSCODE_EXTENSION_IDS
