--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,9 +29,9 @@ spec:
           name: vscode-server
           env:
             - name: PUID
-              value: 1000
+              value: "1000"
             - name: PGID
-              value: 1000
+              value: "1000"
             - name: TZ
               value: "Etc/UTC"
             - name: SUDO_PASSWORD
